--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -12,12 +12,12 @@
   <p></p>  
   <form method="get">  
     {{ form.as_p }}
-    <input type='submit' value="Решить" />
+    <input type='submit' value="Решить" >
   </form> 
  
 {{ d }}
 <br>
 {{ solution }} 
-</div> 
+</div>
 {% endblock content %}
 ﻿
