--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
-{% block title %}{{ student.name }} {{ student.surname }}{% endblock title %}
+{% block title %}Академия Щ.И.Т - Информация о студенте{% endblock title %}
 
 
 {% block nav_class_students %}active{% endblock nav_class_students %}
