--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -2,7 +2,8 @@
 {% load staticfiles %}
 
 
-{% block title %}Информация о - {{ coach.name }}{% endblock title %}
+{% block title %}Академия Щ.И.Т - Информация о преподавателе{% endblock title %}
+
 
 {% block content %}
      <div class= "container">    
@@ -22,8 +23,7 @@
           <tr><td>Курсы ассистент</td>
           <td>{% for course in iamassistant %}
           <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса <a href="{% url 'students:list_view'%}?course_id={{ course.id }}"> <span class="glyphicon glyphicon-search" aria-hidden="true"></span></a> <br />
-          {% endfor %}</td></tr>        
-
+          {% endfor %}</td></tr>
     </table>  
     </div>
 {% endblock content %}
