--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -2,7 +2,8 @@
 {% load staticfiles %}
 
 
-{% block title %}Информация о курсе - {{ course.name }}{% endblock title %}
+{% block title %}Академия Щ.И.Т - Информация о курсе{% endblock title %}
+
 
 {% block content %}
      <div class= "container">    
@@ -32,4 +33,4 @@
     </table> 
     <br />
     </div>
-{% endblock content%}
+{% endblock content %}
