--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
          <li class="{% block blow_contact %}{% endblock blow_contact %}">
                     <a href="{% url 'contact' %}">Contacts</a></li>
          <li class="{% block blow_students %}{% endblock blow_students %}">
-                    <a href="{% url 'students:list' %}{% block spec_link %}{% endblock spec_link %}">Students</a></li>
+                    <a href="{% url 'students:list_view' %}{% block spec_link %}{% endblock spec_link %}">Students</a></li>
                  
          
         </ul>
