--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -14,6 +14,14 @@
     <div class="container">
       <div class="starter-template">
         <div class="container">
+          {% if messages %}
+          <div class="alert alert-success">
+            {% for message in messages %}
+              <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+              <strong{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</strong>
+            {% endfor %}
+          </div>
+          {% endif %}
         <h2>Adding new student</h2>
           <form method="post">
               {% csrf_token %}
