--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -10,7 +10,7 @@
   <p></p>  
   <form method="get">  
     {{ form.as_p }}
-    <input type='submit' value="Решить">
+    <input type="submit">
   </form> 
   {{ d }}
   <br>
@@ -18,3 +18,4 @@
 </div>
 {% endblock content %}
 ﻿
+
