--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -2,6 +2,8 @@
 
 {% block title %}detail{% endblock title %}
 
+{% block nav_class_students %}active{% endblock nav_class_students %}
+
 {% block content %}
 <div class="jumbotron">
     <div class="detail">
