--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -5,37 +5,60 @@
 {% block nav_class_students %}active{% endblock nav_class_students %}
 
 {% block content %}
-<div class="jumbotron">
-    <div class="detail">
-        <table class="table">
-            <thead>
-            <tr class="success">
-                <td><strong>№</strong></td>
-                <td><strong>фамилия имя</strong></td>
-                <td><strong>адрес</strong></td>
-                <td><strong>skype</strong></td>
-                <td><strong>курсы</strong></td>
-            </tr>
-            </thead>
-            <tbody>
-            <h2>Список студентов</h2>
-            {% if students_list %}
-            {% for student in students_list %}
-            <tr>
-                <td>{{ student.id }}</td>
-                <td><a href="{% url 'students:detail' student.id %}">{{ student.full_name }} </a></td>
-                <td>{{ student.address }}</td>
-                <td>{{ student.skype }}</td>
-                <td>
-                    {% for course in student.courses.all %}
-                    <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
-                    {% endfor %}
-                </td>
-            </tr>
+<div class="detail">
+
+    {% if messages %}
+    <div class="alert alert-success alert-dismissible" role="alert">
+        <p class="messages">
+            {% for message in messages %}
+            {{ message }}
             {% endfor %}
-            {% endif %}
-            </tbody>
-        </table>
+        </p>
     </div>
+    {% endif %}
+    <br>
+    <a href="{% url 'students:add' %}">
+        <button type="button" class="btn btn-primary">+ Добавить нового студента</button>
+    </a>
+
+    <h2>Список студентов</h2>
+    <table class="table">
+        <thead>
+        <tr class="success">
+            <td><strong>№</strong></td>
+            <td><strong>фамилия имя</strong></td>
+            <td><strong>адрес</strong></td>
+            <td><strong>skype</strong></td>
+            <td><strong>курсы</strong></td>
+            <td><strong></strong></td>
+        </tr>
+        </thead>
+        <tbody>
+
+        {% if students_list %}
+        {% for student in students_list %}
+        <tr>
+            <td>{{ student.id }}</td>
+            <td><a href="{% url 'students:detail' student.id %}">{{ student.full_name }} </a></td>
+            <td>{{ student.address }}</td>
+            <td>{{ student.skype }}</td>
+            <td>
+                {% for course in student.courses.all %}
+                <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+                {% endfor %}
+            </td>
+            <td>
+                <a href="{% url 'students:edit' student.id %}">
+                    <button type="button" class="btn btn-primary">Изменить</button>
+                </a>
+                <a href="{% url 'students:remove' student.id %}">
+                    <button type="button" class="btn btn-primary">Удалить</button>
+                </a>
+                </td>
+        </tr>
+        {% endfor %}
+        {% endif %}
+        </tbody>
+    </table>
 </div>
 {% endblock content %}
