--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -8,7 +8,7 @@
 {% block content %}
      <div class= "container">    
       <div class="jumbotron">
-      <h2>{{ coach.name }} {{ coach.surname }}</h2><hr>
+      <h2>{{ coach.fullname }}</h2><hr>
      <h3></h3>
     <table class= "course_info">
         <tr><td>Дата Рождения</td><td>{{ coach.date_of_birth|date:"d F, Y" }}</td></tr>
