--- a/templates/include/row_include.html
+++ b/templates/include/row_include.html
@@ -1,1 +1,3 @@
 <td><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></td>
+<td><a href="{% url 'students:edit' student.id %}">Edit</a></td>
+<td><a href="{% url 'students:remove' student.id %}">Remove</a></td>
