--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -11,6 +11,15 @@
 
 
 {% block content %}
+{% if messages %}
+        <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            {% for message in messages %}{{ message }}{% endfor %}
+        </div>
+    {% endif %}
+  <div>
+    <button class="btn"><a href="{% url 'courses:add-lesson' course.id %}">Добавить занятие</a></button>
+  </div>
     <div class="jumbotron">
       <div class="container">
         <div class="page-header">
