--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,12 @@
 
 
 {% block content %}
+{% if messages %}
+        <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            {% for message in messages %}{{ message }}{% endfor %}
+        </div>
+    {% endif %}
   <div class="jumbotron">
     <div class="container">
       <div class="page-header">
