templated coaches and couses

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,10 +4,10 @@
 {% load staticfiles %}
 
 
-{% block title %}PyBursa: Main page{% endblock title%}
+{% block title %}PyBursa: Контакты{% endblock title%}
 
 
-{% block nav_class_contact %}{% endblock %}
+{% block nav_class_contact %}active{% endblock %}
 
 
 {% block main_content %}
@@ -45,5 +45,4 @@
     </div>
   </div>
 </div>
-<!--  end of my code -->
 {% endblock main_content %}
