--- a/templates/base.html
+++ b/templates/base.html
@@ -32,9 +32,12 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="{% block nav_class_index %}{% endblock %}"><a href="{% url 'index' %}">Главная</a></li>
-        <li class="{% block nav_class_contact %}{% endblock %}"><a href="{% url 'contact' %}">Контакты</a></li>
-        <li class="{% block nav_class_student %}{% endblock %}"><a href="{% url 'students:list_view' %}">Студенты</a></li>
+        <li class="{% block nav_class_index %}{% endblock %}">
+          <a href="{% url 'index' %}">Главная</a></li>
+        <li class="{% block nav_class_contact %}{% endblock %}">
+          <a href="{% url 'contact' %}">Контакты</a></li>
+        <li class="{% block nav_class_student %}{% endblock %}">
+          <a href="{% url 'students:list_view' %}">Студенты</a></li>
         <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
       </ul>
     </div>
