--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}PyBursa: Main page{% endblock title%}
+{% block title %}PyBursa: Главная страница{% endblock title%}
 
 
 {% block nav_class_index %}active{% endblock %}
@@ -12,30 +12,35 @@
 
 {% block main_content %}
 <div class="page-header">
-    <h1>Технополис</h1>
+  <h1>Технополис</h1>
 </div>
 <p>Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
-    Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
-    Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
+  Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных,
+  до тонкостей разработки приложений для мобильных платформ.
+  Такие проекты, как Technopolis, важны и для рынка в целом,
+  и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность
+  общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры.
+  Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков,
+  организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
 <br>
 <h2>Популярные курсы</h2>
 <br>
 <div class="table-responsive">
-    <table class="table table-hover table-condensed">
-        <thead>
-        <tr>
-            <th class="text-center">Курс</th>
-            <th class="text-center">Описание</th>
-        </tr>
-        </thead>
-        <tbody>
+  <table class="table table-hover table-condensed">
+    <thead>
+      <tr>
+      <th class="text-center">Курс</th>
+        <th class="text-center">Описание</th>
+      </tr>
+      </thead>
+      <tbody>
         {% for course in courses %}
         <tr>
-            <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
-            <td>{{ course.short_description }}</td>
+          <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
+          <td>{{ course.short_description }}</td>
         </tr>
         {% endfor %}
-        </tbody>
-    </table>
+      </tbody>
+  </table>
 </div>
 {% endblock main_content %}
