include added + subdir name

--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -18,7 +18,7 @@
   <div class="table-responsive col-md-6">
 
 
-{% include "coaches_photo_include.html" %}
+{% include "include/coaches_photo_include.html" %}
 
 
     <br><br><br>
