--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -26,7 +26,7 @@
       <thead></thead>
       <tr class="success">
         <td>дата рождения</td>
-        <td>{{ coach.date_of_birth }}</td>
+        <td>{{ coach.date_of_birth|date:"d F, Y" }}</td>
       </tr>
       <tr class="success">
         <td>адрес</td>
