--- a/templates/courses/remove.html
+++ b/templates/courses/remove.html
@@ -11,7 +11,7 @@
 
 
 {% block content %}
-         
+      <h3>Вы уверенны, что хотите удалить курс {{ course.name }}</h3>   
     
       <form method="post">
         {% csrf_token %}
