--- a/templates/courses/add.html
+++ b/templates/courses/add.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}PyBursa Add Student{% endblock title %}
+{% block title %}PyBursa New Course{% endblock title %}
 
 
 {% block active_main %}active{% endblock active_main %}
