--- a/templates/courses/add_lesson.html
+++ b/templates/courses/add_lesson.html
@@ -11,7 +11,7 @@
 
 
 {% block content %}
-  <div class='container'>
+  <div>
     <h3> Создание нового занятия </h3>
       <form method="post">
         {% csrf_token %}
