--- a/templates/courses/edit.html
+++ b/templates/courses/edit.html
@@ -11,13 +11,13 @@
 
 
 {% block content %}
-   <div class='container'>
+   <div>
      {% if messages %}
         <div class="alert alert-info alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             {% for message in messages %}{{ message }}{% endfor %}
         </div>
-    {% endif %}}    
+    {% endif %}    
        
     <h3> Редактирование данных курса </h3>
       <form method="post">
