--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,13 +1,19 @@
-{% extends "students/base.html" %}
+{% extends "base.html" %}
 
 
 {% load staticfiles %}
 
 
-{% block page_header %}PyBursa: Список студентов{% endblock %}
+{% block title %}PyBursa: Список студентов{% endblock title%}
 
 
-{% block page_content %}
+{% block nav_class_student %}active{% endblock %}
+
+
+{% block main_content %}
+  <div class="page-header">
+    <h1>Список студентов</h1>
+  </div>
 <div class="table-responsive">
   <table class="table table-hover">
     <thead>
@@ -38,4 +44,4 @@
     </tbody>
   </table>
 </div>
-{% endblock page_content %}
+{% endblock main_content %}
