renamed block content (7.1_50%_3att)

--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -10,7 +10,7 @@
 {% block nav_class_index %}active{% endblock %}
 
 
-{% block main_content %}
+{% block content %}
 <div class="page-header">
     <h1>{{ course.name }}</h1>
 </div>
@@ -75,4 +75,4 @@
         </tbody>
     </table>
 </div>
-{% endblock main_content %}
+{% endblock content %}
