--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 {% block nav_class_index %}active{% endblock %}
 
 
-{% block main_content %}
+{% block content %}
 <div class="page-header">
   <h1>Технополис</h1>
 </div>
@@ -43,4 +43,4 @@
       </tbody>
   </table>
 </div>
-{% endblock main_content %}
+{% endblock content %}
