--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -10,7 +10,7 @@
 {% block nav_class_student %}active{% endblock %}
 
 
-{% block main_content %}
+{% block content %}
   <div class="page-header">
     <h1>{{ student_details.name }} {{ student_details.surname }}</h1>
   </div>
@@ -50,4 +50,4 @@
     </tbody>
   </table>
 </div>
-{% endblock main_content %}
+{% endblock content %}
