--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -10,7 +10,7 @@
 {% block nav_class_student %}active{% endblock %}
 
 
-{% block main_content %}
+{% block content %}
   <div class="page-header">
     <h1>Список студентов</h1>
   </div>
@@ -44,4 +44,4 @@
     </tbody>
   </table>
 </div>
-{% endblock main_content %}
+{% endblock content %}
