--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
-{% load staticfiles %}
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -32,12 +34,9 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="{% block nav_class_index %}{% endblock %}">
-          <a href="{% url 'index' %}">Главная</a></li>
-        <li class="{% block nav_class_contact %}{% endblock %}">
-          <a href="{% url 'contact' %}">Контакты</a></li>
-        <li class="{% block nav_class_student %}{% endblock %}">
-          <a href="{% url 'students:list_view' %}">Студенты</a></li>
+        <li class="{% block nav_class_index %}{% endblock %}"><a href="{% url 'index' %}">Главная</a></li>
+        <li class="{% block nav_class_contact %}{% endblock %}"><a href="{% url 'contact' %}">Контакты</a></li>
+        <li class="{% block nav_class_student %}{% endblock %}"><a href="{% url 'students:list_view' %}">Студенты</a></li>
         <!-- <li><a href="{% url 'results' %}">Equation</a></li> -->
       </ul>
     </div>
@@ -48,7 +47,7 @@
 <div class="container">
 
 
-{% block main_content %}{% endblock main_content %}
+{% block content %}{% endblock content %}
 
 
 </div>
