--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -10,7 +10,7 @@
 {% block nav_class_index %}active{% endblock %}
 
 
-{% block main_content %}
+{% block content %}
 <div class="page-header">
   <h1>{{ coach.user.first_name }} {{ coach.user.last_name }}</h1>
 </div>
@@ -73,4 +73,4 @@
     </table>
   </div>
 </div>
-{% endblock main_content %}
+{% endblock content %}
