--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
 {% block nav_class_contact %}active{% endblock %}
 
 
-{% block main_content %}
+{% block content %}
 <div class="container" id="cnt1">
   <div class="row feature">
     <div class="col-md-4">
@@ -45,4 +45,4 @@
     </div>
   </div>
 </div>
-{% endblock main_content %}
+{% endblock content %}
