--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 
 {% block content %}
 {% if messages %}
-        <div class="alert alert-info alert-dismissible" role="alert">
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            {% for message in messages %}{{ message }}{% endfor %}
-        </div>
+  <div class="alert alert-danger" role="alert">
+    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+    {% for message in messages %} {{ message }} {% endfor %}
+  </div>
 {% endif %}
   <div class="jumbotron">
     <div class="container">
