--- a/templates/courses/add.html
+++ b/templates/courses/add.html
@@ -15,7 +15,7 @@
     <h3> Создание нового курса </h3>
       <form method="post">
         {% csrf_token %}
-        {{ form.as_table }}
+        {{ form.as_p }}
         <input type="submit" value="Создать" />
      </form>
   </div>
