--- a/templates/courses/edit.html
+++ b/templates/courses/edit.html
@@ -2,9 +2,9 @@
 
 {% load staticfiles %}
 
-{% block title %}Edit student{% endblock title %}
+{% block title %}Edit course{% endblock title %}
 
-{% block nav_active_students %}active{% endblock nav_active_students %}
+{% block nav_active_main %}active{% endblock nav_active_main %}
 
 {% block form %}
 	{% if messages %}
@@ -15,7 +15,7 @@
 		</ul>
 	{% endif %}
 
-	<h2>Редактирование данных студента</h2>
+	<h2>Редактирование курса</h2>
 	
 
 	<form method="post">
