--- a/templates/index.html
+++ b/templates/index.html
@@ -14,17 +14,25 @@
 				<p class='text2'>The online conferences and meetups, collaborates on code, and much more. Online videos will help you along the way, and the mailing lists will keep you in touch.</p>
 			</div>
 			<div>
-				
-
+				{% if messages %}
+					<ul class="messages">
+    				{% for message in messages %}
+    					<li{% if message.tags %} class="{{ message.tags }}"{% endif %}><h3>{{ message }}</h3></li>
+    				{% endfor %}
+					</ul>
+				{% endif %}
+				<a href="{% url 'courses:add' %}"><input type="buttom" value="Добавить курс" class="btn btn-primary"></a>
 			</div>
 			<h2 class='possition'>Our courses</h2>
 			<div class='grey'>
 				<table class='table'>
-					<tr class='title_table'><th>Lesson</th><th>Theme</th>
+					<tr class='title_table'><th>Lesson</th><th>Theme</th><th></th><th></th>
 					{% for course in courses %}
 						<tr>
 							<td><a href="{% url 'courses:detail' course.id %}">{{ course.name|upper }}</a></td>
 							<td>{{ course.short_description|title }}</td>
+							<td><a href="{% url 'courses:edit' course.id %}"><input class="btn btn-default" type="buttom" value="Изменить"></a></td>
+							<td><a href="{% url 'courses:remove' course.id %}"><input class="btn btn-default" type="buttom" value="Удалить"></a></td>
 						</tr>
 					{% endfor %}
 				</table>
