--- a/templates/students/remove.html
+++ b/templates/students/remove.html
@@ -8,7 +8,7 @@
 
 {% block form %}
 	<h2>Студент {{ student.name }} {{ student.surname }} будет удален</h2>
-	<form method="POST">
+	<form method="post">
 		{% csrf_token %}
 		<input type="submit" value="Удалить">
 	</form>
