--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -13,6 +13,8 @@
 {% block content %}
 <div class= "container">    
   <div class="jumbotron">
+  {% include "include/result_msg_include.html" %}
+    <a href="{% url 'students:add' %}" role="button" class="btn btn-primary">Добавить нового студента</a>
     <h2>Список студентов</h2><hr>
     <table class = "course_info">
         <tr class = "oddtr">
@@ -21,6 +23,8 @@
           <td class = "second_td">Адрес</td>
           <td class = "second_td">Skype</td>
           <td class = "first_td">курсы</td>
+          <td></td>
+          <td></td>
         </tr>
         {% for student in student %}
         <tr>
@@ -30,7 +34,11 @@
           <td>{{ student.skype }}</td>
           <td>{% for course in student.courses.all %}
           <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>
+
         {% endfor %}</td>
+          <td><a href="{% url 'students:edit' student.id%}" role="button" class="btn btn-primary">Изменить</a></td>
+          </td>
+          <td><a href="{% url 'students:remove' student.id%}" role="button" class="btn btn-primary">Удалить</a></td>
         </tr>
       {% endfor %}
     </table>  
