--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -15,6 +15,19 @@
 			<div class="page-header">
 				<h1>Список студентов</h1>
 			</div>
+
+			{% if messages %}
+				{% for message in messages %}
+				<div class="jumbotron">
+					{{ message }}
+				</div>
+				{% endfor %}
+			{% endif %}
+			<a href="{% url 'students:add' %}">
+			<button type="button" class="btn btn-default btn-lg">
+  			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>Добавить нового студента
+			</button>
+			</a>
 			<div class="row">
 				<div class="col-md-12">
 					<table class="table table-striped">
@@ -39,6 +52,21 @@
 									<p><a href="{% url 'courses:detail' cour.id %}">{{ cour.name }}</p>
 									{% endfor %}
 								</td>
+								<td>
+									<a href="{% url 'students:edit' st.id %}">
+										<button type="button" class="btn btn-default btn-lg">
+  										<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Изменить
+										</button>
+									</a>
+								<td>
+								<td>
+									<a href="{% url 'students:remove' st.id %}">
+										<button type="button" class="btn btn-default btn-lg">
+  										<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Удалить
+										</button>
+									</a>
+								<td>
+
 							</tr>
 							{% endfor %}
 						</tbody>
