--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -1,29 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Student Details</title>
-    {% load staticfiles %}
-    <!-- Bootstrap -->
-    <link href="../../../static/css/bootstrap.min.css" rel="stylesheet">
+{% extends "base.html" %}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-<ul class="nav nav-pills">
-  <li role="presentation"><a href="{% url 'index' %}">PyBursa</a></li>
-  <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
-  <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-  <li role="presentation"><a href="{% url 'students:list_view' %}">Students</a></li>
-</ul>
+
+{% block title %}Coach details{% endblock %}
+
+
+{% block main_content%}
 <div class="container">
 <div class="page-header">
   <h1>{{ coaches.first_name }} {{ coaches.last_name }}</h1>
@@ -37,7 +18,7 @@
   <div class="table-responsive">
   <table class="table table-hover table-bordered">
     <tr>
-      <td>Дата рождения</td><td>{{ coaches.date_of_birth }}</td>
+      <td>Дата рождения</td><td>{{ coaches.date_of_birth | date:'F j, Y' }}</td>
     </tr>
     <tr>
     <tr>
@@ -71,11 +52,4 @@
 </div>
 </div>
 </div>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    {% load staticfiles %}
-    <script src="../../../static/js/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    {% load staticfiles %}
-    <script src="../../../static/js/bootstrap.min.js"></script>
-  </body>
-</html>
+{% endblock main_content %}
