--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -1,34 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Web with Python</title>
+{% extends "base.html" %}
 
-    <!-- Bootstrap -->
-    {% load staticfiles %}
-    <link href="{% static '../static/css/bootstrap.min.css' %}" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-<ul class="nav nav-pills">
-  <li role="presentation"><a href="{% url 'index' %}">PyBursa</a></li>
-  <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
-  <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-  <li role="presentation"><a href="{% url 'students:list_view' %}?course_id={{ courses.id }}">Students</a></li>
-</ul>
+{% block title %}Courses details{% endblock %}
+
+
+{% block main_content%}
 <div class="container">
 <div class="jumbotron">
   <h2>{{ courses.name }}</h2>
-  <p>{{ courses.description }}</p>  
+  <p>{{ courses.description | truncatechars:32 }}</p>  
 </div>
 </div>
 
@@ -109,12 +89,4 @@
   </table>
 </div>
 </div>
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  {% load staticfiles %}
-  <script src="{% static '../static/js/jquery.min.js' %}"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    {% load staticfiles %}
-    <script src="{% static '../static/js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% endblock main_content %}
