--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Web with Python</title>
+{% extends "base.html" %}
 
-    <!-- Bootstrap -->
-    {% load staticfiles %}
-    <link href="{% static '../static/css/bootstrap.min.css' %}" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-<ul class="nav nav-pills">
-  <li role="presentation"><a href="#">PyBursa</a></li>
-  <li role="presentation" class="active"><a href="{% url 'index' %}">Main</a></li>
-  <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-  <li role="presentation"><a href="{% url 'students:list_view' %}">Students</a></li>
-</ul>
+{% block nav_class_index %}active{% endblock %}
+
+
+{% block main_content %}
 <div class="container">
 <div class="jumbotron">
   <h2>Web ooniversity</h2>
@@ -40,26 +20,22 @@
       <td> <b>Description<b> <td>
     </tr>  
     <tr class="info"> 
-      <td><a href="{% url 'courses:detail' 1 %}">{{ courses.0.name }}</a><td>
-      <td> {{ courses.0.short_description }} <td>  
+      <td><a href="{% url 'courses:detail' 1 %}">{{ courses.0.name | upper }}</a><td>
+      <td> {{ courses.0.short_description | title }} <td>  
     </tr>
     <tr> 
-      <td><a href="{% url 'courses:detail' 2 %}"> {{ courses.1.name }}</a><td>
-      <td> {{ courses.1.short_description }} <td>  
+      <td><a href="{% url 'courses:detail' 2 %}"> {{ courses.1.name | upper }}</a><td>
+      <td> {{ courses.1.short_description | title }} <td>  
     </tr>
     <tr class="info"> 
-      <td><a href="{% url 'courses:detail' 3 %}"> {{ courses.2.name }}</a><td>
-      <td> {{ courses.2.short_description }} <td>  
+      <td><a href="{% url 'courses:detail' 3 %}"> {{ courses.2.name | upper }}</a><td>
+      <td> {{ courses.2.short_description | title }} <td>  
     </tr>  
   </table>   
 </div>
 </div>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  {% load staticfiles %}
-  <script src="{% static '../static/js/jquery.min.js' %}"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    {% load staticfiles %}
-    <script src="{% static '../static/js/bootstrap.min.js' %}"></script>
-  </body>
-</html>
+{% include "include/footer_include.html" %}
+
+
+{% endblock main_content %}
