kz 7.1 modified hard 1.6

--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Quadratic results</title>
+{% extends "base.html" %}
+
+{% load staticfiles %}
+
+{% block title %}Quadratic results{% endblock title %}
+{% block quadratic_is_active %}active{% endblock quadratic_is_active %}
+
+{% block content %}
   </head>
   <body>
 
@@ -24,6 +24,4 @@
       </div>
     </div>
   </div>
-
-  </body>
-</html>
+{% endblock content %}
