--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,55 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% load staticfiles %}
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+{% extends "base.html" %}
 
-    <link rel="icon" href="{% static 'images/logo.ico' %}">
+{% load staticfiles %}
 
-    <title>PyBursa - Contacts</title>
+{% block title %}Contacts{% endblock title %}
+{% block contact_is_active %}active{% endblock contact_is_active %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'css/cover.css' %}" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
+{% block content %}
   <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-               <img class="img-circle" src="../static/images/cover.jpg" align="left" width="160" height="140" alt = "Logo">
-              <nav>
-                <ul class="nav masthead-nav">
-
-                  <li><a href="{% url 'index' %}">Main</a></li>
-                <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-                <li><a href="{% url 'student_list' %}">Students</a></li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-
 
         <div class="row">
               <div class="col-lg-4">
@@ -81,28 +38,7 @@
               </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
+{% endblock content %}
 
 
 
-          <div class="mastfoot">
-            <div class="inner">
-              <p>For <a href="http://itbursa.com/">ItBursa</a>courses</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
-
-
-</body></html>
