--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,33 @@
 {% extends "base.html" %}
+
 {% load staticfiles %}
+
 {% block title %}pyBursa - Main page{% endblock title %}
+
+{% block index_is_active %}active{% endblock index_is_active %}
+
+{% block content %}
+	{% include "students/include/messages_include.html" %}
+<a class="btn btn-primary btn-lg" href="{% url 'courses:add' %}" role="button"><span class="glyphicon glyphicon-plus"></span> Добавить новый курс</a>
+				</p>
+				<h2>Description</h2>
+                <div>
+                    <p>Zапишись на курсы Python! * Попади в тренд современной  WEB разработки!</p>
+                </div>
+                <div class="list-of-courses">
+    <h3> One shoot, one course</h3>
+    <table>
+      <tr>
+        <th class="head-name">Курс</th>
+        <th class="head-name">Описание</th>
+      </tr>
+      {% for course in courses %}
+      <tr>
+        <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
+        <td>{{ course.short_description }}</td>
+      </tr>
+      {% endfor %}
+    </table>
+  </div>
+
+{% endblock content %}
