--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,67 +1,43 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>PyBursa - Students</title>
-<meta charset="utf-8">
+{% extends "base.html" %}
 {% load staticfiles %}
-<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
-<link href="{% static 'css/cover.css' %}" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-</head>
-
-<body>
-
-  <!-- Nav bar -->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-    <a class="navbar-brand" href="http://pybursa.com/">
+{% block title %}{{ student.surname }} {{ student.name }}{% endblock title %}
+{% block students_is_active %}active{% endblock students_is_active %}
+{% block content %}
+	<div class="container students">
+    <div class="page-header">
+      <h1 class="top1">{{ student.surname }} {{ student.name }}</h1>
+			<div class="jumbotron">
+        <h2 class="dolgnosti">О cтуденте:</h2>
+				<div class="panel panel-default">
+          <!-- Default panel contents -->
+          <!-- Table -->
+        	<table class="table">
+            <tbody>
+              <tr>
+                <td>Дата рождения</td><td>{{ student.date_of_birth|date:"d F, Y" }}</td>
+							</tr>
+							<tr>
+								<td>Адрес</td><td>{{ student.address }}</td>
+							</tr>
+							<tr>
+								<td>Почта</td><td>{{ student.email }}</td>
+							</tr>
+							<tr>
+								<td>Skype</td><td>{{ student.skype }}</td>
+							</tr>
+							<tr>
+								<td>Телефон</td><td>{{ student.phone }}</td>
+							</tr>
+							<tr>
+								<td>Курсы</td><td>{% for student in student.courses.all %}
+								<a href="{% url 'courses:detail' student.id %}">{{ student.name }}</a><br>
+								{% endfor %}
+								</td>
+							</tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="{% url 'index' %}">Main</a></li>
-        <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:list_view' %}">Students</a></li>
-    </ul>
-  </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<!-- end Nav bar-->
-
-<div id="content_container">
-  <div class="student-table">
-    <h1> {{ student_by_id.name }} {{ student_by_id.surname }}</h1>
-    <table id="full-s">
-      <tr>
-        <td> дата рождения </td>
-        <td> {{ student_by_id.date_of_birth }} </td>
-      </tr>
-      <tr>
-        <td> адрес </td>
-        <td> {{ student_by_id.address }} </td>
-      </tr>
-      <tr>
-        <td> email </td>
-        <td> {{ student_by_id.email }} </td>
-      </tr>
-      <tr>
-        <td> skype </td>
-        <td> {{ student_by_id.skype }} </td>
-      </tr>
-      <tr>
-        <td> телефон </td>
-        <td> {{ student_by_id.phone }} </td>
-      </tr>
-      <tr>
-        <td> курсы </td>
-        <td>  {% for s_courses in student_by_id.courses_id %}
-          <p><a href="{% url 'courses:detail' s_courses.id %}"> {{ s_courses }}</a></p>
-          {% endfor %}</td>
-      </tr>
-    </table>
-  </div>
-</div>
-</body>
-</html>
+  </div>   
+{% endblock content %}
