--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,63 +1,53 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>pyBursa | Courses</title>
-<meta charset="utf-8">
+{% extends "base.html" %}
 {% load staticfiles %}
-<link href="{% static 'css/bootstrap.min.css'%}" rel="stylesheet">
-<link href="{% static 'css/style.css' %}" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-</head>
+{% block title %}Students{% endblock title %}
+{% block students_is_active %}active{% endblock students_is_active %}
 
-<body>
-
-  <!-- Nav bar -->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-    <a class="navbar-brand" href="http://pybursa.com/">
-    <img class="logo-minions" alt="Logo Pretty Minions" src="{% static 'images/logo.jpg' %}"></a>
+{% block content %}
+	<div class="container students">
+		<div class="page-header">
+			<h1 class="descr">Список всех студентов</h1>
+			<div class="jumbotron">
+        {% include "students/include/messages_include.html" %}
+				<p>
+					<a class="btn btn-primary btn-lg" href="{% url 'students:add' %}" role="button"><span class="glyphicon glyphicon-plus"></span> Добавить нового студента</a>
+				</p>
+				<div class="panel panel-default">
+					<!-- Default panel contents -->
+					<!-- Table -->
+					<table class="table table-striped">
+            <thead>
+							<tr>
+								<th>#</th>
+		            <th>Фамилия и имя</th>
+		            <th>Адрес</th>
+								<th>Skype</th>
+								<th colspan="2">Курсы</th>
+              </tr>
+            </thead>
+            <tbody>
+							{% for student in students %}
+              <tr>
+              	<td>{{ student.id }}</td>
+								<td>
+								<a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name }}</a>
+								</td>
+								<td>{{ student.address }}</td>
+								<td>{{ student.skype }}</td>
+								<td>{% for course in student.courses.all %}
+								<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
+								{% endfor %}
+								</td>
+                <td>
+                  <p><a class="btn btn-primary btn-block" href="{% url 'students:edit' student.id %}" role="button"><span class="glyphicon glyphicon-pencil"></span> Изменить</a></p>
+                  <p><a class="btn btn-primary btn-block" href="{% url 'students:remove' student.id %}" role="button"><span class="glyphicon glyphicon-remove"></span> Удалить</a></p>
+                </td>
+							</tr>
+							{% endfor %}
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="{% url 'index' %}">Main</a></li>
-        <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li><a href="{% url 'students:list_view' %}">Students</a></li>
-       
-    </ul>
-  </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<!-- end Nav bar-->
-
-<div id="content_container">
-  <div class="list-of-courses">
-  <div class="student-table">
-  <h1> Список студентов</h1>
-    <table>
-      <tr>
-        <th class="head-name">номер</th>
-        <th class="head-name">фамилия имя</th>
-        <th class="head-name">адрес</th>
-        <th class="head-name">skype</th>
-        <th class="head-name">курсы</th>
-      </tr>
-      {% for student in students %}
-      <tr>
-        <td>{{ student.id_l }}</td>
-        <td><a href="{% url 'students:detail' student.id %}">{{ student.surname }} {{ student.name}} </a></td>
-        <td>{{ student.address }}</td>
-        <td>{{ student.skype }}</td>
-        <td> {% for s_courses in student.courses_id %}
-          <p><a href="{% url 'courses:detail' s_courses.id %}">{{ s_courses }}</a></p>
-          {% endfor %}
-        </td>
-      </tr>
-      {% endfor %}
-    </table>
-    </div>
-</div>
-</body>
-</html>
+	</div>
+{% endblock content %}
